--- a/product-service/package.json
+++ b/product-service/package.json
@@ -8,12 +8,14 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "dev": "cdk synth && sam local start-api -t cdk.out/ProductServiceStack.template.json"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
     "@types/jest": "^29.5.11",
     "@types/node": "20.10.4",
+    "@types/uuid": "^9.0.7",
     "aws-cdk": "2.117.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
@@ -21,8 +23,15 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@middy/core": "^5.1.0",
+    "@middy/http-json-body-parser": "^5.1.0",
     "aws-cdk-lib": "2.117.0",
+    "aws-sdk": "^2.1526.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "mongoose": "^8.0.3",
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.1"
   }
 }
