--- a/user-service/package.json
+++ b/user-service/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.10.9",
     "serverless-offline": "^13.3.2",
@@ -25,7 +25,7 @@
     "@middy/http-json-body-parser": "^4.7.0",
     "aws-lambda": "^1.0.7",
     "axios": "^1.6.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
