--- a/user-service/serverless.yml
+++ b/user-service/serverless.yml
@@ -9,6 +9,15 @@ provider:
   region: ap-southeast-1
   httpApi:
     cors: true
+  # SNS Topic
+  environment:
+    SNS_TOPIC: { Ref: CustomerTopic }
+  iamRoleStatements:
+    - Effect: 'Allow'
+      Action:
+        - 'sns:Publish'
+      Resource:
+        - !Ref CustomerTopic
 
 custom:
   stage: dev
@@ -78,7 +87,29 @@ functions:
       - httpApi:
           path: /payment
           method: get
+  order:
+    handler: app/handler.CollectPayment
+    events:
+      - httpApi:
+          path: /place-order
+          method: post
 
 plugins:
   - serverless-offline
   - serverless-plugin-typescript
+
+resources:
+  Resources:
+    CustomerTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: 'customer sns topic description'
+        TopicName: CustomerTopic
+
+  # output for later usages
+  Outputs:
+    CustomerTopicInfo:
+      Description: customer-topic
+      Value: !Ref CustomerTopic
+      Export:
+        Name: customer-topic
