--- a/user-service/package.json
+++ b/user-service/package.json
@@ -24,6 +24,7 @@
     "@middy/core": "^4.7.0",
     "@middy/http-json-body-parser": "^4.7.0",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1527.0",
     "axios": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
