--- a/transaction-service/package.json
+++ b/transaction-service/package.json
@@ -21,9 +21,19 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@middy/core": "^5.1.0",
+    "@middy/http-json-body-parser": "^5.1.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/pg": "^8.10.9",
     "aws-cdk-lib": "2.117.0",
     "aws-lambda": "^1.0.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "constructs": "^10.0.0",
+    "db-migrate-pg": "^1.5.2",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.1",
     "source-map-support": "^0.5.21"
   }
 }
