--- a/user-service/package.json
+++ b/user-service/package.json
@@ -16,6 +16,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.10.9",
     "serverless-offline": "^13.3.2",
+    "serverless-plugin-common-excludes": "^4.0.0",
+    "serverless-plugin-include-dependencies": "^5.1.0",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.5",
     "ts-node": "^10.9.2",
@@ -32,6 +34,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
     "db-migrate-pg": "^1.5.2",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
