--- a/product-service/package.json
+++ b/product-service/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.10.4",
     "@types/uuid": "^9.0.7",
     "aws-cdk": "2.117.0",
@@ -30,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "constructs": "^10.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.1"
