--- a/transaction-service/package.json
+++ b/transaction-service/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "dev": "cdk synth && sam local start-api -t cdk.out/TransactionServiceStack.template.json -p 5000"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
