--- a/nuxt-app/package.json
+++ b/nuxt-app/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@unlok-co/nuxt-stripe": "^2.0.0",
     "nuxt": "^3.9.0",
+    "nuxt-icon": "^0.6.8",
     "typescript": "^5.3.3",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5",
@@ -19,10 +21,12 @@
   "dependencies": {
     "@nuxt/ui": "^2.11.1",
     "@pinia/nuxt": "^0.5.1",
+    "@stripe/stripe-js": "^2.2.2",
     "@vee-validate/nuxt": "^4.12.4",
     "@vee-validate/rules": "^4.12.4",
     "@vee-validate/yup": "^4.12.4",
     "pinia": "^2.1.7",
+    "stripe": "^14.11.0",
     "yup": "^1.3.3"
   }
 }
